=== HEAD

* Fix frozen string literal issues on JRuby 9.1.0.0 (jeremyevans)

* Allow json_serializer :include option with cascaded values to work correctly when used with association_proxies (jeremyevans)

=== 4.34.0 (2016-05-01)

* Add support for :dataset_associations_join association option to dataset_associations plugin, for making resulting datasets have appropriate joins (jeremyevans)

* Log server connection was attempted to in PoolTimeout exception messages in sharded connection pool (jeremyevans)

* Log Database :name option in PoolTimeout exception messages (bigkevmcd, jeremyevans) (#1176)

* Add duplicate_columns_handler extension, for raising or warning if a dataset returns multiple columns with the same name (TSMMark, jeremyevans) (#1175)

* Support registering per-Database custom range types in the pg_range extension (steveh) (#1174)

* Support :preconnect=>:concurrently Database option for preconnecting in separate threads (kch, jeremyevans) (#1172)

* Make prepared_statements_safe plugin work correctly with CURRENT_DATE/CURRENT_TIMESTAMP defaults (jeremyevans) (#1168)

* Add validates_operator validation helper (petedmarsh) (#1170)

* Recognize additional unique constraint violation on Microsoft SQL Server (jeremyevans)

* Add :hash option to Dataset#(select|to)_hash(_groups)? methods for choosing object to populate (mwpastore) (#1167)

=== 4.33.0 (2016-04-01)

* Handle arbitrary objects passed as arguments to the association method (jeremyevans) (#1166)

* Handle array with multiple columns as Dataset#insert_conflict :target value on PostgreSQL (chanks) (#1165)

* Add Database#transaction :savepoint=>:only option, for only creating a savepoint if already inside a transaction (jeremyevans)

* Make Database#sequence_for_table on Oracle handle cases where the schema for a table cannot be determined (jeremyevans)

* The boolean_readers, boolean_subsets, and class_table_inheritance plugins no longer do blind rescues (jeremyevans) (#1162)
